# mia-accounting-django

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
accounting/: admin.py  converters.py  forms.py  models.py  populate.py  tests.py  urls.py  utils.py  validators.py  views.py
accounting/management/commands/: accounting_accounts.py  accounting_sample.py
accounting/templates/accounting/: account_detail.html  account_form.html  account_list.html  balance-sheet.html  cash-summary.html  cash.html  cash_summary.html  income-statement.html  journal.html  ledger-summary.html  ledger.html  ledger_summary.html  report-balance-sheet.html  report-cash-summary.html  report-cash.html  report-income-statement.html  report-journal.html  report-ledger-summary.html  report-ledger.html  report-trial-balance.html  search.html  transaction-sort.html  transaction_detail-expense.html  transaction_detail-income.html  (+12 more)
accounting/templatetags/: accounting.py
accounting/views/: __init__.py  reports.py
docs/: requirements.txt
docs/source/: accounting.migrations.rst  accounting.rst  accounting.templatetags.rst  conf.py  index.rst  mia_core.migrations.rst  mia_core.rst  mia_core.templatetags.rst  modules.rst
mia_core/: converters.py  digest_auth.py  forms.py  models.py  period.py  status.py  stored_post.py  template_filters.py  templatefilters.py  templatetags.py  urls.py  utils.py  views.py
mia_core/templatetags/: mia_core.py
src/accounting/: converters.py  forms.py  models.py  utils.py  views.py
src/mia_core/: apps.py  models.py  period.py  utils.py
tests/: test_run.py
(+73 files in other folders)
